fix contrast accessibility

--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ summary:hover .summary-chevron-up svg {
   line-height: 24px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #6070ff;
+  color: #274aa4;
   height: 48px;
   margin-top: 22px;
   border-radius: 8px;
